tests/dmd/fail_compilation/json2.d
/*
REQUIRED_ARGS: -Xi=
LDC: just a different error msg
DISABLED: LDC
TEST_OUTPUT:
---
Error: argument expected for switch '-Xi='
       run `dmd` to print the compiler manual
       run `dmd -man` to open browser on manual
---
*/
